add blog function

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>{{ page.title }}</title>
-	<link rel="stylesheet" href="/assets/css/style.css">
-	<link rel="shortcut icon" href="favicon.png">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"/>
-</head>
-<body>
+---
+layout:base
+---
+<div id="content">
 	{{ content }}
-</body>
-</html>
+</div>
