--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,10 +27,10 @@
     <body>
         <header>
 
-            <h1 class="tittle"><a href="{{ site.baseurl }}>丹丹的小窝</a></h1>
+            <h1 class="tittle"><a href="{{ site.baseurl }}">丹丹的小窝</a></h1>
          <nav>
             <ul>
-                <li><a href="{{ site.baseurl }}>首页</a></li>
+                <li><a href="{{ site.baseurl }}">首页</a></li>
                 <li><a href="{{ site.baseurl }}photos.html">我的照片</a></li>
                 <li><a href="{{ site.baseurl }}archive.html">开心的事</a></li>
             </ul>
