--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+        <link rel="shorcut ico" href="{{ site.baseurl }}favicon.ico">
+        <link rel="shorcut ico" href="{{ site.baseurl }}favicon.png">
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
